<resources>
    <string name="app_name">ImageSelector</string>

    <string name="action_settings">Settings</string>
    <string name="select_mode">Select Mode</string>
    <string name="mode_single">Single-Choice</string>
    <string name="mode_multi">Multi-Choice</string>
    <string name="max_select_amount">Max Selected Amount</string>
    <string name="hint_default_amount">default amount is 9</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="enable_preview">Enable Preview</string>
    <string name="show_gif">Show Gif</string>
    <string name="only_show_gif">Only Show Gif</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_select">Select</string>
</resources>
