<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.fubaisum.imageselector.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/select_mode"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choice_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/multi"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_single" />

            <RadioButton
                android:id="@+id/multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_multi" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_select_amount"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/request_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/hint_default_amount"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_camera"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/show_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/show"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable" />

            <RadioButton
                android:id="@+id/no_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_preview"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/show_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/show"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable" />

            <RadioButton
                android:id="@+id/no_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_main_launch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Launch" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
